--- a/.github/workflows/build-ffmpeg.yml
+++ b/.github/workflows/build-ffmpeg.yml
@@ -313,12 +313,14 @@ jobs:
       - name: patch
         working-directory: ffmpeg_sources/ffmpeg
         run: |
-          git apply -v --ignore-whitespace ../../ffmpeg_patches/ffmpeg/01-amf-colorspace-v2.patch
-          git apply -v --ignore-whitespace ../../ffmpeg_patches/ffmpeg/02-idr-on-amf.patch
-          git apply -v --ignore-whitespace ../../ffmpeg_patches/ffmpeg/03-amfenc-disable-buffering.patch
-          git apply -v --ignore-whitespace ../../ffmpeg_patches/ffmpeg/04-mfenc-lowlatency.patch
-          git apply -v --ignore-whitespace ../../ffmpeg_patches/ffmpeg/05-qsv-session-leak.patch
-          git apply -v --ignore-whitespace ../../ffmpeg_patches/ffmpeg/06-amfenc-new-av1-usages.patch
+          #git apply -v --ignore-whitespace ../../ffmpeg_patches/ffmpeg/01-amf-colorspace-v2.patch
+          #git apply -v --ignore-whitespace ../../ffmpeg_patches/ffmpeg/02-idr-on-amf.patch
+          #git apply -v --ignore-whitespace ../../ffmpeg_patches/ffmpeg/03-amfenc-disable-buffering.patch
+          #git apply -v --ignore-whitespace ../../ffmpeg_patches/ffmpeg/04-mfenc-lowlatency.patch
+          #git apply -v --ignore-whitespace ../../ffmpeg_patches/ffmpeg/05-qsv-session-leak.patch
+          #git apply -v --ignore-whitespace ../../ffmpeg_patches/ffmpeg/06-amfenc-new-av1-usages.patch
+          git apply -v --ignore-whitespace ../../ffmpeg_patches/ffmpeg/07-smart-access-video.patch
+          git apply -v --ignore-whitespace ../../ffmpeg_patches/ffmpeg/08-more-pixel-formats.patch
 
       - name: Setup cross compilation
         id: cross
